tests/errors/syn.missing-ident.compile-time-param.or
main :: () -> void {
    add :: (!8: int, b: int) -> int {
        return a + b;
    };
};
